fix: fix E2E test-errors